--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  rxdart: 0.24.1
+  bloc: ^6.0.1
   flutter_modular:
   dio: ^3.0.9
   dartz:
